--- a/basic-animation.html
+++ b/basic-animation.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="icon" href="pictures/black-logo.png">
   <script src="js/script.js" defer></script>
 </head>
 <body>
@@ -46,7 +47,7 @@
           <li><a href="about.html">About Me</a></li>
           <div class="dropdown">
           <li><a href="projects.html">Projects</a></li>
-          <div class="dropdown-content">
+          <div class="dropdown-content dropdownColor">
             <a href="basic-web.html">Basic Web Design</a>
             <a href="basic-animation.html">Basic Animation</a>
             <a href="basic-ux.html">Basic UX</a>
@@ -163,7 +164,7 @@
                     <br><br>
                     When a character is done, the next step is to animate it. To make a proper animation, you have to think about how the character should move and make sure all of it is drawn.
                     <br><br>
-                    An example would be if you have to make a character walk, he has to move his legs - if he doesn't move his legs, it looks like he is floating over the screen, which of course isn't natural. Therefore you have to draw every step and movement. Which you after can animate with code.
+                    An example would be if you must make a character walk, he has to move his legs - if he doesn't move his legs, it looks like he is floating over the screen, which of course isn't natural. Therefore, you have to draw every step and movement. Which you after can animate with code.
                     <br><br>
                 </p>
               </figcaption>
