--- a/basic-video.html
+++ b/basic-video.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="icon" href="pictures/black-logo.png">
   <script src="js/script.js" defer></script>
 </head>
 <body>
@@ -45,7 +46,7 @@
           <li><a href="about.html">About Me</a></li>
           <div class="dropdown">
           <li><a href="projects.html">Projects</a></li>
-          <div class="dropdown-content">
+          <div class="dropdown-content dropdownColor">
             <a href="basic-web.html">Basic Web Design</a>
             <a href="basic-animation.html">Basic Animation</a>
             <a href="basic-ux.html">Basic UX</a>
