--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="icon" href="pictures/black-logo.png">
 	<script src="js/script.js" defer></script>
 </head>
 <body>
@@ -15,7 +16,7 @@
 
 
 
-<section id="navBar">
+<section id="navBar" class="navbarFront">
 <div>
 	<a href="index.html"><img id="logo" src="pictures/kmj-logo.png" alt="this should be a logo"></a>
 </div>
@@ -46,7 +47,7 @@
           <li><a href="about.html">About Me</a></li>
           <div class="dropdown">
           <li><a href="projects.html">Projects</a></li>
-          <div class="dropdown-content">
+          <div class="dropdown-content" id="dropdownFront">
             <a href="basic-web.html">Basic Web Design</a>
             <a href="basic-animation.html">Basic Animation</a>
             <a href="basic-ux.html">Basic UX</a>
@@ -81,7 +82,7 @@
       <br>
       <p>Through this webpage I will show you my world. For several years I have been painting, developing and designing for education and for fun. This webpage will take you to the corners of my work and make you understand me better.
       <br><br>
-      My name is Karoline, I am 22 years old and study to become a multimedia designer.</p>
+      My name is Karoline, I am 22 years old and I study to become a multimedia designer.</p>
       <br><br>
       <img id="signature" src="pictures/underskrift.png" alt="This is the little piggie">
   </div>
