--- a/basic-animation.html
+++ b/basic-animation.html
@@ -154,8 +154,6 @@
                 </a>
             </li>
 
-
-
             <li class="card-item">
               <figcaption class="caption">
                 <h1>How to...</h1>
@@ -171,6 +169,12 @@
             </li>
         </ul>
     </main>
+
+<div id="CV-box">
+    <p id="CV-text">If you want to go more in to dept with our project: "the big sleep", <br>you can find our <a href="http://www.kmjdesign.dk/webpage/the-big-sleep/animated-poster.gif" target="_blank">gif animated poster</a>, our <a href="http://www.kmjdesign.dk/webpage/the-big-sleep/personas-collage.png" target="_blank">personas collage</a>, the <a href="http://www.kmjdesign.dk/webpage/the-big-sleep/storyboard.pdf" target="_blank">storyboard</a> which broad it to life and a summary of our <a href="http://www.kmjdesign.dk/webpage/the-big-sleep/expert-test.pdf" target="_blank">expert test</a>. </p><br>
+</div>
+
+
 <footer class="colophon">
     <a href="https://www.facebook.com/karoline.meyerjacobsen" class="fa fa-facebook"></a>
     <a href="https://plus.google.com/u/0/116774334355246502920" class="fa fa-google"></a>
