--- a/basic-ux.html
+++ b/basic-ux.html
@@ -75,9 +75,10 @@
       <br>
       <p>Basic UX was all about the user. How does the user think, react and how to generally make a business work? When creating a business, there's a lot to consider, such as how do we get the costumers attention, how will the cost structure be, which resources have we, who is the competition and who might be partners to the project.
       <br><br>
-      Our main idea was to create an app which would collect your receipts and help you organize your expenses. If you are curious about the business ideas behind it, you can see the business model here:
+      Our main idea was to create an app which would collect your receipts and help you organize your expenses. If you are curious about the business ideas behind it, you can see the business model and PowerPoint presentation here:
       <br><br>
       <a href="http://kmjdesign.dk/webpage/business-model-canvas.jpg" target="_blank">Business Model Canvas</a>
+      <a href="http://kmjdesign.dk/webpage/rekreate/reKreate-pitch.pdf" target="_blank">PowerPoint Presentation</a>
 </p></figcaption>
             </li>
             <li class="card-item double">
