fixed new projects

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
     </div>
   </div>
 </div>
-</div>
+
 
 	<div id="menu-big" >
 	   <ul>
@@ -119,7 +119,7 @@
   </div>
 
 <div id="CV-box">
-    <p id="CV-text">Do you want to know more? You can <a href="http://www.kmjdesign.dk/portfolio/CV.pdf" target="_blank">read my CV</a> or contact me for further information.</p><br>
+    <p id="CV-text">Do you want to know more? You can <a href="http://www.kmjdesign.dk/portfolio/pdf/CV.pdf" target="_blank">read my CV</a> or contact me for further information.</p><br>
 </div>
 
 <footer class="colophon">
