--- a/basic-animation.html
+++ b/basic-animation.html
@@ -39,7 +39,7 @@
     </div>
   </div>
 </div>
-</div>
+
 
   <div id="menu-big" >
      <ul>
@@ -48,6 +48,8 @@
           <div class="dropdown">
           <li><a href="projects.html">Projects</a></li>
           <div class="dropdown-content dropdownColor">
+             <a href="dynamic-prototypes.html">Dynamic Prototypes</a>
+            <a href="user-centered-design.html">User-centered Design</a>
             <a href="basic-web.html">Basic Web Design</a>
             <a href="basic-animation.html">Basic Animation</a>
             <a href="basic-ux.html">Basic UX</a>
@@ -81,7 +83,7 @@
 </p></figcaption>
             </li>
             <li class="card-item double">
-                <a href="http://www.kmjdesign.dk/webpage/animation/" target="_blank">
+                <a href="http://www.kmjdesign.dk/m1/animation/" target="_blank">
                     <figure class="card">
                         <img class="gif" src="pictures/sheep.gif" alt="A man fishing.">
                         <figcaption class="caption">
@@ -93,7 +95,7 @@
                 </a>
             </li>
             <li class="card-item">
-                <a href="http://www.kmjdesign.dk/portfolio/Character-design.pdf" target="_blank">
+                <a href="http://www.kmjdesign.dk/portfolio/pdf/Character-design.pdf" target="_blank">
                     <figure class="card">
                         <img src="pictures/computer.jpg" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
@@ -106,7 +108,7 @@
                 </a>
             </li>
             <li class="card-item">
-                <a href="http://www.kmjdesign.dk/webpage/p-rex/" target="_blank">
+                <a href="http://www.kmjdesign.dk/m1/p-rex/" target="_blank">
                     <figure class="card">
                         <img src="pictures/penguin.png" alt="Wineyards from Italy.">
                         <figcaption class="caption">
@@ -118,7 +120,7 @@
             </li>
 
             <li class="card-item double">
-                <a href="http://www.kmjdesign.dk/webpage/the-big-sleep/" target="_blank">
+                <a href="http://www.kmjdesign.dk/m1/the-big-sleep/" target="_blank">
                     <figure class="card">
                         <img src="pictures/big-sleep.jpg" alt="An air balloon made of a lightbulp.">
                         <figcaption class="caption">
@@ -132,7 +134,7 @@
             </li>
 
             <li class="card-item">
-                <a href="http://kmjdesign.dk/webpage/calculator/" target="_blank">
+                <a href="http://kmjdesign.dk/m1/calculator/" target="_blank">
                     <figure class="card">
                         <img src="pictures/calculator.png" alt="An air balloon made of a lightbulp.">
                         <figcaption class="caption">
@@ -143,7 +145,7 @@
                 </a>
             </li>
             <li class="card-item">
-                <a href="http://kmjdesign.dk/webpage/drum/" target="_blank">
+                <a href="http://kmjdesign.dk/m1/drum/" target="_blank">
                     <figure class="card">
                         <img src="pictures/drumset.png" alt="An air balloon made of a lightbulp.">
                         <figcaption class="caption">
@@ -171,7 +173,7 @@
     </main>
 
 <div id="CV-box">
-    <p id="CV-text">If you want to go more in to dept with our project: "the big sleep", <br>you can find our <a href="http://www.kmjdesign.dk/webpage/the-big-sleep/animated-poster.gif" target="_blank">gif animated poster</a>, our <a href="http://www.kmjdesign.dk/webpage/the-big-sleep/personas-collage.png" target="_blank">personas collage</a>, the <a href="http://www.kmjdesign.dk/webpage/the-big-sleep/storyboard.pdf" target="_blank">storyboard</a> which broad it to life and a summary of our <a href="http://www.kmjdesign.dk/webpage/the-big-sleep/expert-test.pdf" target="_blank">expert test</a>. </p><br>
+    <p id="CV-text">If you want to go more in to dept with our project: "the big sleep", <br>you can find our <a href="http://www.kmjdesign.dk/m1/the-big-sleep/animated-poster.gif" target="_blank">gif animated poster</a>, our <a href="http://www.kmjdesign.dk/m1/the-big-sleep/personas-collage.png" target="_blank">personas collage</a>, the <a href="http://www.kmjdesign.dk/m1/the-big-sleep/storyboard.pdf" target="_blank">storyboard</a> which broad it to life and a summary of our <a href="http://www.kmjdesign.dk/m1/the-big-sleep/expert-test.pdf" target="_blank">expert test</a>. </p><br>
 </div>
 
 
