--- a/basic-web.html
+++ b/basic-web.html
@@ -39,7 +39,7 @@
     </div>
   </div>
 </div>
-</div>
+
 
   <div id="menu-big" >
      <ul>
@@ -48,6 +48,8 @@
           <div class="dropdown">
           <li><a href="projects.html">Projects</a></li>
           <div class="dropdown-content dropdownColor">
+            <a href="dynamic-prototypes.html">Dynamic Prototypes</a>
+            <a href="user-centered-design.html">User-centered Design</a>
             <a href="basic-web.html">Basic Web Design</a>
             <a href="basic-animation.html">Basic Animation</a>
             <a href="basic-ux.html">Basic UX</a>
@@ -80,7 +82,7 @@
 </p></figcaption>
             </li>
             <li class="card-item double">
-                <a href="http://www.kmjdesign.dk/webpage/redesign/" target="_blank">
+                <a href="http://www.kmjdesign.dk/m1/redesign/" target="_blank">
                     <figure class="card">
                         <img src="pictures/kilkee.png" alt="A man fishing.">
                         <figcaption class="caption">
@@ -97,7 +99,7 @@
                 </a>
             </li>
             <li class="card-item">
-                <a href="http://www.kmjdesign.dk/webpage/mobile/" target="_blank">
+                <a href="http://www.kmjdesign.dk/m1/mobile/" target="_blank">
                     <figure class="card">
                         <img src="pictures/mobile.png" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
@@ -109,7 +111,7 @@
                 </a>
             </li>
             <li class="card-item">
-                <a href="http://kmjdesign.dk/webpage/responsive/" target="_blank">
+                <a href="http://kmjdesign.dk/m1/responsive/" target="_blank">
                     <figure class="card">
                         <img src="pictures/responsive.png" alt="Wineyards from Italy.">
                         <figcaption class="caption">
