--- a/dynamic-prototypes.html
+++ b/dynamic-prototypes.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width">
-  <title>Basic Video</title>
+  <title>Basic UX</title>
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -12,6 +12,7 @@
   <script src="js/script.js" defer></script>
 </head>
 <body>
+
 
 
 
@@ -39,6 +40,7 @@
   </div>
 </div>
 
+
   <div id="menu-big" >
      <ul>
           <li><a href="index.html">Home</a></li>
@@ -59,56 +61,74 @@
    </div>
 </section>
 
-
 <ul class="breadcrumb">
   <li><a href="projects.html">Projects</a></li>
-  <li>Basic Video</li>
+  <li>Dynamic Prototypes</li>
 </ul>
 
 
     <main id="content" class="main-area">
-        <ul class="cards" id="cardsBasicVideo">
+
+        <ul class="cards" id="cardsBasicUX">
 
             <li class="card-item">
-              <figcaption class="caption">
-                <h1>Basic Video</h1>
-                    <br>
-                    <p>The video weeks where so much fun! We had to be creative with a camera, thinking of new ways to show the audience our ideas. The video theme lasted only two weeks, so the learning was intense and you had to be awake to keep up. In generel much of the learning of how to use the programs when editing and the finishing touches is much self taught knowledge.
-              </p></figcaption>
+<figcaption class="caption">
+  <h1>Dynamic Prototypes</h1>
+      <br>
+      <p>Basic UX was all about the user. How does the user think, react and how to generally make a business work? When creating a business, there's a lot to consider, such as how do we get the costumers attention, how will the cost structure be, which resources have we, who is the competition and who might be partners to the project.
+      <br><br>
+      Our main idea was to create an app which would collect your receipts and help you organize your expenses. If you are curious about the business ideas behind it, you can see the business model and PowerPoint presentation here:
+</p></figcaption>
             </li>
             <li class="card-item double">
-                <a href="http://mihaelsandro.com/kea/video/" target="_blank">
+                <a href="http://www.kmjdesign.dk/m2/curriculum/" target="_blank">
                     <figure class="card">
-                        <img src="pictures/cph-dare-2.png" alt="A man fishing.">
+                        <img src="pictures/curriculum.png" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
-                            <h3 class="caption-title">CPH Dare</h3>
-              <p>For this video we got the title: "City walk and meetup", which we had to turn into a video. This is only the limit of the imagination which stops you. Therefor we tried with CPH Dare - a movie which should represent a way of going through CPH in a different way.</p>
+                            <h3 class="caption-title">Pimp Your Curriculum</h3>
+              <p>In the ending of the theme, we had to present our idea in front of the class. To help present our project, we had to code a website which showed our company.
+                <br><br>
+              Together with our website, we had a PowerPoint presentation, which was to support our subject and make it more convincing for the client.</p>
+                        </figcaption>
+                    </figure>
+                </a>
+
+            </li>
+            <li class="card-item">
+                <a href="https://xd.adobe.com/view/3c7fc820-2f58-405c-9efe-01792eb006e1/" target="_blank">
+                    <figure class="card">
+                        <img src="pictures/XD.png" alt="A man fishing.">
+                        <figcaption class="caption">
+                            <h3 class="caption-title">Prototype XD</h3>
+              <p>In the first report, you can read about our company’s vision, mission and values. We had defined a target group, which was the primary audience to our product. In this report, you will find the costumers journey, explaining how the general app will help the user.</p>
+              <br>
+              <h3>Read report &nbsp;&nbsp; &rarr;</h3>
                         </figcaption>
                     </figure>
                 </a>
             </li>
             <li class="card-item">
-                <a href="https://www.youtube.com/watch?v=ESyZglNpmQc&feature=youtu.be" target="_blank">
+                <a href="http://www.kmjdesign.dk/portfolio/pdf/bert-test.pdf" target="_blank">
                     <figure class="card">
-                        <img src="pictures/life-passing-by.png" alt="A girl decorating a tree for christmas.">
+                        <img src="pictures/bert.png" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
-                            <h3 class="caption-title">Life Passing By</h3>
-              <p>Life Passing By was a project of 3 days. First day was creating a story through one of three titels. We chose to go with "people who are to busy",  which we wanted to show by a person not paying attention to their surroundings.</p>
+                            <h3 class="caption-title">Report - Bert test</h3>
+              <p>The style guide, was explaining all our thoughts behind the design. To design and create a website and an app are not easy. Every color, picture and setup have to be well considered and has to be chosen for a reason. In this report you can read about our thought behind the design.</p>
+              <br>
+              <h3>Read report &nbsp;&nbsp; &rarr;</h3>
                         </figcaption>
                     </figure>
                 </a>
             </li>
             <li class="card-item">
               <figcaption class="caption">
-                    <p>All off the videos in this project was filmed with a phone and a gimble. The gimble was helping giving a steady filming, which improves the experience for the user.
-                    <br><br>
-                    After filming all of the editing was done with Adobes Premiere Pro. With this program we where able to make mask, tracing the people of the video, and making a fluent video combined with the music.
-                    <br><br>
-                    If you are interested in more knowledge of how the idea came to life, you can see the storyboard, which gave life to City Walk and Meetup.
-                    <br><br>
-                    <a href="http://kmjdesign.dk/portfolio/pdf/story-board-city.pdf" target="_blank">Find the storyboard here.</a>
-              </p></figcaption>
+                <p>
+
+                </p>
+              </figcaption>
             </li>
+
+
         </ul>
     </main>
 <footer class="colophon">
