--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" href="pictures/black-logo.png">
 	<script src="js/script.js" defer></script>
 </head>
-<body>
+<body onload="loaderThreeSec()">
 
 
 
@@ -39,7 +39,6 @@
     </div>
   </div>
 </div>
-</div>
 
 	<div id="menu-big" >
 	   <ul>
@@ -48,6 +47,8 @@
           <div class="dropdown">
           <li><a href="projects.html">Projects</a></li>
           <div class="dropdown-content" id="dropdownFront">
+            <a href="dynamic-prototypes.html">Dynamic Prototypes</a>
+            <a href="user-centered-design.html">User-centered Design</a>
             <a href="basic-web.html">Basic Web Design</a>
             <a href="basic-animation.html">Basic Animation</a>
             <a href="basic-ux.html">Basic UX</a>
@@ -74,7 +75,9 @@
   <div class="keyart_layer" id="keyart-8" data-speed="100"></div>
 </div>
 
-
+<section id="section10" class="demo">
+  <a href="#wrapper"><span></span></a>
+</section>
 
 <div class="wrapper" id="wrapper-front">
   <div class="text-frontpage">
