--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,6 @@
     </div>
   </div>
 </div>
-</div>
 
   <div id="menu-big" >
      <ul>
@@ -48,6 +47,8 @@
           <div class="dropdown">
           <li><a href="projects.html">Projects</a></li>
           <div class="dropdown-content dropdownColor">
+            <a href="dynamic-prototypes.html">Dynamic Prototypes</a>
+            <a href="user-centered-design.html">User-centered Design</a>
             <a href="basic-web.html">Basic Web Design</a>
             <a href="basic-animation.html">Basic Animation</a>
             <a href="basic-ux.html">Basic UX</a>
@@ -71,10 +72,40 @@
                     <br>
                     <p>Through the first half year of my education on KEA, I have worked with basic web design, basic animation, basic user experience and basic video. This site is going to show you some of my projects within these areas.
                     <br><br>
+                    This website will be updated continuously as I get futher in my study.
                 </p>
               </figcaption>
             </li>
             <li class="card-item double">
+                <a href="user-centered-design.html">
+                    <figure class="card">
+                        <img src="pictures/yfu-front.png" alt="A girl decorating a tree for christmas.">
+                        <figcaption class="caption">
+                            <h3 class="caption-title">User-centered Design</h3>
+                            <p>In the project User-centered design, we got our first real client. We had to come up with a marketing campaign to help YFU reach their target audience.
+                            <br><br>
+                            </p>
+                            <h3>View Projects &nbsp;&nbsp; &rarr;</h3>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+
+            <li class="card-item">
+                <a href="dynamic-prototypes.html">
+                    <figure class="card">
+                        <img src="pictures/curriculum.png" alt="A girl decorating a tree for christmas.">
+                        <figcaption class="caption">
+                            <h3 class="caption-title">Dynamic Prototypes</h3>
+                            <p>In the weeks with dynamic prototypes, we where taught to write our own JSON. With a right JSON file, you are able to create a dynamic content, created by JavasScript.
+                            <br><br>
+                            </p>
+                            <h3>View Projects &nbsp;&nbsp; &rarr;</h3>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+            <li class="card-item">
                 <a href="basic-web.html">
                     <figure class="card">
                         <img src="pictures/code-square.png" alt="A man fishing.">
@@ -102,6 +133,7 @@
                     </figure>
                 </a>
             </li>
+
             <li class="card-item">
                 <a href="basic-ux.html">
                     <figure class="card">
