--- a/basic-ux.html
+++ b/basic-ux.html
@@ -39,7 +39,7 @@
     </div>
   </div>
 </div>
-</div>
+
 
   <div id="menu-big" >
      <ul>
@@ -48,6 +48,8 @@
           <div class="dropdown">
           <li><a href="projects.html">Projects</a></li>
           <div class="dropdown-content dropdownColor">
+            <a href="dynamic-prototypes.html">Dynamic Prototypes</a>
+            <a href="user-centered-design.html">User-centered Design</a>
             <a href="basic-web.html">Basic Web Design</a>
             <a href="basic-animation.html">Basic Animation</a>
             <a href="basic-ux.html">Basic UX</a>
@@ -77,12 +79,12 @@
       <br><br>
       Our main idea was to create an app which would collect your receipts and help you organize your expenses. If you are curious about the business ideas behind it, you can see the business model and PowerPoint presentation here:
       <br><br>
-      <a href="http://kmjdesign.dk/webpage/business-model-canvas.jpg" target="_blank">Business Model Canvas</a>
-      <a href="http://kmjdesign.dk/webpage/rekreate/reKreate-pitch.pdf" target="_blank">PowerPoint Presentation</a>
+      <a href="http://kmjdesign.dk/m1/business-model-canvas.jpg" target="_blank">Business Model Canvas</a>
+      <a href="http://kmjdesign.dk/m1/rekreate/reKreate-pitch.pdf" target="_blank">PowerPoint Presentation</a>
 </p></figcaption>
             </li>
             <li class="card-item double">
-                <a href="http://www.kmjdesign.dk/webpage/rekreate/" target="_blank">
+                <a href="http://www.kmjdesign.dk/m1/rekreate/" target="_blank">
                     <figure class="card">
                         <img src="pictures/rekreate-web.png" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
@@ -96,7 +98,7 @@
 
             </li>
             <li class="card-item">
-                <a href="http://www.kmjdesign.dk/portfolio/reKreate_report.pdf" target="_blank">
+                <a href="http://www.kmjdesign.dk/portfolio/pdf/reKreate_report.pdf" target="_blank">
                     <figure class="card">
                         <img src="pictures/rekreate.jpg" alt="A man fishing.">
                         <figcaption class="caption">
@@ -109,7 +111,7 @@
                 </a>
             </li>
             <li class="card-item">
-                <a href="http://www.kmjdesign.dk/portfolio/reKreate_design-documentation.pdf" target="_blank">
+                <a href="http://www.kmjdesign.dk/portfolio/pdf/reKreate_design-documentation.pdf" target="_blank">
                     <figure class="card">
                         <img src="pictures/style-guide.png" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
