--- a/user-centered-design.html
+++ b/user-centered-design.html
@@ -74,7 +74,10 @@
 <figcaption class="caption">
   <h1>User-Centered Design</h1>
       <br>
-      <p>Basic UX was all about the user. How does the user think, react and how to generally make a business work? When creating a business, there's a lot to consider, such as how do we get the costumers attention, how will the cost structure be, which resources have we, who is the competition and who might be partners to the project.
+      <p>In this project we got our first client YFU. We had to make a campaign suggestion to reach young people in the age of 18-25 y/o, who is considering a year abroad after gymnasium.<br><br>
+      To get a better understanding of the target audience, the school arranged a visit to Roskilde Gymnasium, where we were able to ask them about their daily habbits. When designing the product, we where then keeping in mind the answers from our survey at the gymnasium.
+      <br><br>
+      In the end of the project, we had to pitch our idea to the client. We tried to go with a gorilla marketing plan, to get the attention of the user.
       <br><br>
 
 </p></figcaption>
@@ -84,8 +87,8 @@
                     <figure class="card">
                         <img src="pictures/yfu-front.png" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
-                            <h3 class="caption-title">ReKreate Website</h3>
-              <p>In the ending of the theme, we had to present our idea in front of the class. To help present our project, we had to code a website which showed our company.
+                            <h3 class="caption-title">YFU Redesign</h3>
+              <p>In the ending of the theme, e had to present our idea in front of the class. To help present our project, we had to code a website which showed the company.
                 <br><br>
               Together with our website, we had a PowerPoint presentation, which was to support our subject and make it more convincing for the client.</p>
                         </figcaption>
@@ -98,8 +101,8 @@
                     <figure class="card">
                         <img src="pictures/yfu-report.png" alt="A man fishing.">
                         <figcaption class="caption">
-                            <h3 class="caption-title">Report - idea & presentation</h3>
-              <p>In the first report, you can read about our company’s vision, mission and values. We had defined a target group, which was the primary audience to our product. In this report, you will find the costumers journey, explaining how the general app will help the user.</p>
+                            <h3 class="caption-title">Report - Market research and analysis</h3>
+              <p>In the first report, you can read about the analysis of the company. To get the best result, we did a thorough research of the target audience and the general market for travelling agencies. In the end of the report, you can read about the campaign plan which after is implimented with our website and general campaign.</p>
               <br>
               <h3>Read report &nbsp;&nbsp; &rarr;</h3>
                         </figcaption>
@@ -111,8 +114,8 @@
                     <figure class="card">
                         <img src="pictures/design-documentation.png" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
-                            <h3 class="caption-title">Report - Style guide</h3>
-              <p>The style guide, was explaining all our thoughts behind the design. To design and create a website and an app are not easy. Every color, picture and setup have to be well considered and has to be chosen for a reason. In this report you can read about our thought behind the design.</p>
+                            <h3 class="caption-title">Report - Design documentation</h3>
+              <p>The style guide, shows our thoughts and explains the reasons for choosing typhography, colors and our ideas behind our general design in the campaign strategy.</p>
               <br>
               <h3>Read report &nbsp;&nbsp; &rarr;</h3>
                         </figcaption>
