--- a/dynamic-prototypes.html
+++ b/dynamic-prototypes.html
@@ -75,9 +75,9 @@
 <figcaption class="caption">
   <h1>Dynamic Prototypes</h1>
       <br>
-      <p>Basic UX was all about the user. How does the user think, react and how to generally make a business work? When creating a business, there's a lot to consider, such as how do we get the costumers attention, how will the cost structure be, which resources have we, who is the competition and who might be partners to the project.
+      <p>In this project, the goal was to create something dynamic. Our main task was te redesign our own curriculum and write the content as JSON. I worked in a group of 5 people, which each had a role in the creating of the dynamic prototype.
+
       <br><br>
-      Our main idea was to create an app which would collect your receipts and help you organize your expenses. If you are curious about the business ideas behind it, you can see the business model and PowerPoint presentation here:
 </p></figcaption>
             </li>
             <li class="card-item double">
@@ -86,26 +86,11 @@
                         <img src="pictures/curriculum.png" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
                             <h3 class="caption-title">Pimp Your Curriculum</h3>
-              <p>In the ending of the theme, we had to present our idea in front of the class. To help present our project, we had to code a website which showed our company.
-                <br><br>
-              Together with our website, we had a PowerPoint presentation, which was to support our subject and make it more convincing for the client.</p>
+              <p>When having created the JSON, we had to fetch it in our own design. Through design tests and prototypes, we developed a design fitting the target group. </p>
                         </figcaption>
                     </figure>
                 </a>
 
-            </li>
-            <li class="card-item">
-                <a href="https://xd.adobe.com/view/3c7fc820-2f58-405c-9efe-01792eb006e1/" target="_blank">
-                    <figure class="card">
-                        <img src="pictures/XD.png" alt="A man fishing.">
-                        <figcaption class="caption">
-                            <h3 class="caption-title">Prototype XD</h3>
-              <p>In the first report, you can read about our company’s vision, mission and values. We had defined a target group, which was the primary audience to our product. In this report, you will find the costumers journey, explaining how the general app will help the user.</p>
-              <br>
-              <h3>Read report &nbsp;&nbsp; &rarr;</h3>
-                        </figcaption>
-                    </figure>
-                </a>
             </li>
             <li class="card-item">
                 <a href="http://www.kmjdesign.dk/portfolio/pdf/bert-test.pdf" target="_blank">
@@ -113,13 +98,27 @@
                         <img src="pictures/bert.png" alt="A girl decorating a tree for christmas.">
                         <figcaption class="caption">
                             <h3 class="caption-title">Report - Bert test</h3>
-              <p>The style guide, was explaining all our thoughts behind the design. To design and create a website and an app are not easy. Every color, picture and setup have to be well considered and has to be chosen for a reason. In this report you can read about our thought behind the design.</p>
+              <p>At the beginning of the project we created several design options for our redesign of the curriculum. The project started with a user test of the menu bar, which lead to several design  solutions, we then testet with BERT testing.</p>
               <br>
               <h3>Read report &nbsp;&nbsp; &rarr;</h3>
                         </figcaption>
                     </figure>
                 </a>
             </li>
+            <li class="card-item">
+                <a href="https://xd.adobe.com/view/3c7fc820-2f58-405c-9efe-01792eb006e1/" target="_blank">
+                    <figure class="card">
+                        <img src="pictures/XD.png" alt="A man fishing.">
+                        <figcaption class="caption">
+                            <h3 class="caption-title">Prototype XD</h3>
+              <p>To test the functionality of our website before programming it, we desided to create a XD prototype, so it would be as interactive as possible, so the user is able to get a real feeling of how it works when coded.</p>
+              <br>
+              <h3>Read report &nbsp;&nbsp; &rarr;</h3>
+                        </figcaption>
+                    </figure>
+                </a>
+            </li>
+
             <li class="card-item">
               <figcaption class="caption">
                 <p>
