--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
   </div>
 </div>
 
-  <div id="menu-big" >
+  <div id="menu-big" class="coloredNavbar" >
      <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Me</a></li>
